<resources>
    <string name="app_name">Midnightarmy_firstScreen</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="username_login">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="remember_me">Remember me</string>
    <string name="id">Id</string>
    <string name="username_register">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_text" />


</resources>
